--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,9 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
+
+# For bluetooth pairing: https://zmk.dev/docs/troubleshooting/connection-issues#additional-bluetooth-options
+CONFIG_BT_CTLR_PHY_2M=n
